# unitdc-rs

./: Cargo.toml  LICENSE  LICENSE-dependencies  README.md  deny.toml  index.html  unitdc.rc
.github/: FUNDING.yml
.github/workflows/: check.yml  web.yml
assets/: index-03e7b163.css  index-06bca0a2.js  index-08f3c9df.js  index-0c2c0390.js  index-45a0c004.js  index-4a13b58e.js  index-4a8ff925.js  index-7ae395a6.js  index-854444ea.js  index-878bdc69.css  index-9f6c2f34.js  index-ad9ba828.js  index-b0d3e935.js  index-d00d3ddf.js  index-d35f4830.js  index-e0d1f949.js  index-fe41fc21.js  unitdc_web_bg-0a683f6a.wasm  unitdc_web_bg-28424379.wasm  unitdc_web_bg-297384d9.wasm  unitdc_web_bg-2d817ba2.wasm  unitdc_web_bg-3880ae7d.wasm  unitdc_web_bg-5e59e43c.wasm  unitdc_web_bg-66b447f4.wasm  unitdc_web_bg-6e02e78a.wasm  unitdc_web_bg-74e28b20.wasm  unitdc_web_bg-874021b9.wasm  unitdc_web_bg-8fbef108.wasm  unitdc_web_bg-957c36d7.wasm  unitdc_web_bg-ad9bd580.wasm  unitdc_web_bg-d09382aa.wasm  unitdc_web_bg-dd0d3d0f.wasm
crates/unitdc-cli/: Cargo.toml
crates/unitdc-cli/src/: main.rs
crates/unitdc-web/: Cargo.toml
crates/unitdc-web/src/: lib.rs
crates/unitdc-web/ui/: index.html  package.json  vite.config.ts
crates/unitdc-web/ui/src/: App.css  App.tsx  main.tsx  types.ts  util.ts  vite-env.d.ts
crates/unitdc-web/ui/src/components/: ErrorCell.tsx  InputCell.tsx  Keyboard.tsx  OutputCell.tsx
examples/: dna_mass.txt  mpg.txt
scripts/: check-deps.sh
src/: lib.rs  linear_system.rs
src/interpreter/: mod.rs  ops.rs  ops_macros.rs  ops_variables.rs
src/quantity/: mod.rs  units.rs
src/tokenizer/: mod.rs  parsing.rs  token.rs
tests/: interpreter_test.rs
