[package]
name = "unitdc"
version = "0.1.0"
edition = "2021"

authors = ["eternal-flame-AD"]
description = "A dc-like arbitrary precision quantity calculator."
license = "Apache-2.0"
repository = "https://github.com/eternal-flame-AD/unitdc-rs"
keywords = ["dc", "calculator", "quantity", "arbitrary-precision", "RPN"]
categories = ["mathematics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
log = "0.4.19"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-rational = { version = "0.4.1", features = ["serde"] }
num-traits = "0.2.15"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"

[workspace]
members = [
    "crates/unitdc-cli",
    "crates/unitdc-web",
]

[profile.release.package.unitdc-web]
opt-level = "s"

[profile.release]
lto = true
