[package]
name = "unitdc-web"
version = "0.1.0"
authors = ["eternal-flame-AD <yume@yumechi.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.63"
unitdc = { path = "../../" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

web-sys = { version = "0.3.64", features = ["Window"] }
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.64"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
